[ADD] 회원가입 세팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring:
+datasource:
+url: jdbc:h2:~/webo0
+username: webo0
+password: webo0
+driver-class-name: org.h2.Driver
 
+# swagger ?? ? path?? ??? ?? ??
+mvc:
+pathmatch:
+matching-strategy: ant_path_matcher
