[ADD] 회원가입 오류 해결 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
+server.port = 8084
 spring:
-datasource:
-url: jdbc:h2:~/webo0
-username: webo0
-password: webo0
-driver-class-name: org.h2.Driver
-
-# swagger ?? ? path?? ??? ?? ??
-mvc:
-pathmatch:
-matching-strategy: ant_path_matcher
+    h2:
+        console:
+            path: /h2-console
+    datasource:
+        url: jdbc:h2:~/webo0
+        username: webo0
+        password: webo0
+        driver-class-name: org.h2.Driver
+    jpa:
+        hibernate: true
+            ddl-auto: create
