--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 server.port = 8084
 spring:
+    datasource:
+        url: jdbc:h2:~/webo0;DATABASE_TO_UPPER=false;CASE_INSENSITIVE_IDENTIFIERS=true
+        driver-class-name: org.h2.Driver
+        username: webo0
+        password: webo0
+
+    jpa:
+        defer-datasource-initialization: true
+            hibernate: true
+                ddl-auto: create
+#                naming:
+#                    physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#                    implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+            database-platform=org.hibernate.dialect.H2Dialect
+
     h2:
         console:
             path: /h2-console
-    datasource:
-        url: jdbc:h2:~/webo0
-        username: webo0
-        password: webo0
-        driver-class-name: org.h2.Driver
-    jpa:
-        hibernate: true
-            ddl-auto: create
+            enabled=true
+
+debug=false
