회원 정보 저장 성공, application.properties 파일 구조 변경(yml -> properties)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 server.port = 8084
-spring:
-    h2:
-        console:
-            path: /h2-console
-    datasource:
-        url: jdbc:h2:~/webo0
-        username: webo0
-        password: webo0
-        driver-class-name: org.h2.Driver
-    jpa:
-        hibernate: true
-            ddl-auto: create
+spring.h2.console.path=/h2-console
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/webo0
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
